--- a/libyui-ncurses/yast2-ncurses.spec.in
+++ b/libyui-ncurses/yast2-ncurses.spec.in
@@ -5,7 +5,7 @@
 @HEADER@
 
 Summary:	-
-Provides:	YaST2-UI
+Provides:	yast2_ui
 Provides:	y2base:/var/lib/YaST2/servers/ncurses
 Provides:	y2base:/usr/lib/YaST2/servers/ncurses
 Provides:	y2base:/usr/lib/YaST2/plugin/libpy2ncurses.so.2
