- don't link with libcrypt
svn path=/trunk/ncurses/; revision=3468

--- a/libyui-ncurses/testsuite/Makefile.am
+++ b/libyui-ncurses/testsuite/Makefile.am
@@ -13,7 +13,7 @@ INCLUDES = -I../src -I$(includedir) -I$(includedir)/yui
 noinst_PROGRAMS = runcurses
 runcurses_SOURCES = runcurses.cc
 runcurses_LDADD = ../src/liby2ncurses.la -lncurses -lpanel -lpthread \
-	-ly2 -lyui -lycp -lutil -lcrypt
+	-ly2 -lyui -lycp
 runcurses_LDFLAGS = -L$(libdir)			\
 	-Xlinker --whole-archive                \
 	$(plugindir)/libpy2stdio.la             \
@@ -22,8 +22,7 @@ runcurses_LDFLAGS = -L$(libdir)			\
 
 ybin_PROGRAMS = y2ncurses
 y2ncurses_SOURCES = y2ncurses.cc
-y2ncurses_LDADD = -lncurses -lpanel -lpthread -ly2 -lyui -lycp \
-	-lutil -lcrypt
+y2ncurses_LDADD = -lncurses -lpanel -lpthread -ly2 -lyui -lycp
 y2ncurses_LDFLAGS = -L$(libdir)	\
 	-Xlinker --whole-archive		\
 	$(plugindir)/libpy2stdio.la		\
