- use correct lib/agent name for docs (not RPMNAME)
svn path=/trunk/ncurses/; revision=3741

--- a/libyui-ncurses/doc/autodocs/Makefile.am
+++ b/libyui-ncurses/doc/autodocs/Makefile.am
@@ -76,5 +76,5 @@ CLEANFILES = $(html_DATA)
 
 $(filter-out index.html, $(html_DATA)): index.html
 index.html: $(srcdir)/../../src/*.h
-	cd $(srcdir)/../../src && @ybindir@/ydoc @RPMNAME@ *.h
+	cd $(srcdir)/../../src && @ybindir@/ydoc ncurses *.h
 	mv -f $(srcdir)/../../src/*.html .
