--- a/libyui-ncurses/yast2-ncurses.spec.in
+++ b/libyui-ncurses/yast2-ncurses.spec.in
@@ -1,7 +1,5 @@
 @HEADER-COMMENT@
-
-# neededforbuild  gpp libgpp libxcrypt libxcrypt-devel yast2-devel-packages
-
+# neededforbuild gpp libgpp libxcrypt libxcrypt-devel yast2-devel-packages
 @HEADER@
 
 Summary:	-
@@ -30,5 +28,6 @@ Obsoletes:	y2curses
 @plugindir@/libpy2ncurses.so.*
 @plugindir@/libpy2ncurses.so
 @plugindir@/libpy2ncurses.la
+@ydatadir@/pkg_layout.ycp
 # @ybindir@/y2ncurses
 %doc @docdir@
