move fillDefaultList NCPkgTable; add you_layout.ycp
svn path=/trunk/ncurses/; revision=5768

--- a/libyui-ncurses/src/Makefile.am
+++ b/libyui-ncurses/src/Makefile.am
@@ -2,7 +2,8 @@
 # Makefile.am for ncurses/src
 #
 
-ydata_DATA = pkg_layout.ycp
+ydata_DATA = pkg_layout.ycp	\
+	you_layout.ycp
 
 # plugin, libtool forces 'lib' prefix
 AM_CXXFLAGS = -DY2LOG=\"ui-ncurses\"
