you_layout.ycp added
svn path=/trunk/ncurses/; revision=5867

--- a/libyui-ncurses/yast2-ncurses.spec.in
+++ b/libyui-ncurses/yast2-ncurses.spec.in
@@ -32,5 +32,6 @@ Obsoletes:	y2curses
 @plugindir@/libpy2ncurses.so
 @plugindir@/libpy2ncurses.la
 @ydatadir@/pkg_layout.ycp
+@ydatadir@/you_layout.ycp
 # @ybindir@/y2ncurses
 %doc @docdir@
