--- a/libyui-ncurses/src/Makefile.am
+++ b/libyui-ncurses/src/Makefile.am
@@ -1,4 +1,4 @@
-#
+##
 # Makefile.am for ncurses/src
 #
 
@@ -6,8 +6,7 @@ ydata_DATA = pkg_layout.ycp	\
 	you_layout.ycp
 
 # plugin, libtool forces 'lib' prefix
-AM_CXXFLAGS = -DY2LOG=\"ui-ncurses\"
-
+AM_CXXFLAGS = -DY2LOG=\"ui-ncurses\" -DLOCALEDIR=\"${localedir}\"
 plugin_LTLIBRARIES = libpy2ncurses.la
 noinst_LTLIBRARIES = liby2ncurses.la
 
