NCPopupPkg/SelDeps.cc added
svn path=/trunk/ncurses/; revision=7261

--- a/libyui-ncurses/src/Makefile.am
+++ b/libyui-ncurses/src/Makefile.am
@@ -82,6 +82,7 @@ liby2ncurses_la_SOURCES =				\
 	NCPopupSelection.cc NCPopupSelection.h		\
 	NCPopupDeps.cc NCPopupDeps.h			\
 	NCPopupDiskspace.cc NCPopupDiskspace.h		\
+	NCPopupPkgDeps.cc NCPopupSelDeps.cc		\
 	PkgNames.cc PkgNames.h				\
 	ObjectStatStrategy.cc ObjectStatStrategy.h	\
 	NCstyle.mono.h NCstyle.linux.h NCstyle.xterm.h
