- V 2.7.10 - Implemented opt(immediate) for SelectionBox. If set together with   opt(notify), userInput is triggered on selection bar movement too. - Do not trigger UserInput for empty SelectionBox/Table/Tree, if   SPACE was pressed. (#24023)
svn path=/trunk/ncurses/; revision=8956

--- a/libyui-ncurses/testsuite/Makefile.am
+++ b/libyui-ncurses/testsuite/Makefile.am
@@ -26,7 +26,7 @@ y2ncurses_SOURCES = y2ncurses.cc
 y2ncurses_LDADD = -lncurses -lpanel -lpthread -ly2 -lyui -lycp \
 	-lutil -ly2pm
 
-y2ncurses_LDFLAGS = -L$(libdir)	\
+y2ncurses_LDFLAGS = -static -L$(libdir)	\
 	-Xlinker --whole-archive		\
 	$(plugindir)/libpy2stdio.la		\
 	$(plugindir)/libpy2script.la		\
