support of hyperlinks in package description
svn path=/trunk/ncurses/; revision=9796

--- a/libyui-ncurses/src/Makefile.am
+++ b/libyui-ncurses/src/Makefile.am
@@ -86,6 +86,7 @@ liby2ncurses_la_SOURCES =				\
 	NCPopupSelDeps.cc NCPopupSelDeps.h		\
 	NCPopupFile.cc NCPopupFile.h			\
 	NCPopupPkgTable.cc NCPopupPkgTable.h		\
+	NCPopupPkgDescr.cc NCPopupPkgDescr.h		\
 	PkgNames.cc PkgNames.h				\
 	ObjectStatStrategy.cc ObjectStatStrategy.h	\
 	NCstyle.braille.h NCstyle.mono.h 		\
