--- a/libyui-ncurses/testsuite/Makefile.am
+++ b/libyui-ncurses/testsuite/Makefile.am
@@ -21,6 +21,13 @@ runcurses_LDFLAGS = -L$(libdir)			\
 	../src/libpy2ncurses.la			\
 	-Xlinker --no-whole-archive
 
+noinst_PROGRAMS = utf8test
+utf8test_SOURCES = utf8test.cc			\
+		NCstring_test.h NCstring_test.cc
+
+utf8test_LDADD = ../src/liby2ncurses.la -lncursesw -lpanelw -lpthread \
+	-ly2 -lyui -lycp -lutil -ly2pm
+
 ybin_PROGRAMS = y2ncurses
 y2ncurses_SOURCES = y2ncurses.cc
 y2ncurses_LDADD = -lncurses -lpanel -lpthread -ly2 -lyui -lycp \
