Requires: glibc-locale  added to spec-file
svn path=/trunk/ncurses/; revision=12188

--- a/libyui-ncurses/yast2-ncurses.spec.in
+++ b/libyui-ncurses/yast2-ncurses.spec.in
@@ -15,6 +15,7 @@ Provides:	yast2-ui-ncurses-devel
 Obsoletes:	yast2-ui-ncurses-devel
 Provides:	y2curses
 Obsoletes:	y2curses
+Requires:	glibc-locale
 
 %description
 -
