class NCFileTable added
svn path=/trunk/ncurses/; revision=12472

--- a/libyui-ncurses/src/Makefile.am
+++ b/libyui-ncurses/src/Makefile.am
@@ -68,6 +68,7 @@ liby2ncurses_la_SOURCES =				\
 	NCTree.h NCTree.cc				\
 	NCLogView.h NCLogView.cc			\
 	NCMultiLineEdit.h NCMultiLineEdit.cc		\
+	NCFileTable.h NCFileTable.cc			\
 	NCAskForExistingDirectory.h NCAskForExistingDirectory.cc	\
 									\
 	NCPopup.h NCPopup.cc				\
