Fixed broken Y2Component handling: UIs are now no longer directly Y2Components, but created by a YUIComponent upon setServerArgs() This fixes the multiple init problems we had after switching to the NI
svn path=/trunk/ncurses/; revision=13653

--- a/libyui-ncurses/src/Makefile.am
+++ b/libyui-ncurses/src/Makefile.am
@@ -22,6 +22,7 @@ liby2ncurses_la_SOURCES =				\
 	NCi18n.h					\
 	Y2Log.h Y2Log.cc				\
 	tnode.h	position.h position.cc			\
+	YNCursesUI.cc YNCursesUI.h			\
 	NCtext.h NCtext.cc				\
 	NCstring.h NCstring.cc				\
 	stringutil.h stringutil.cc			\
@@ -97,7 +98,7 @@ liby2ncurses_la_SOURCES =				\
 
 libpy2ncurses_la_SOURCES = $(liby2ncurses_la_SOURCES)	\
 	Y2CCNCursesUI.cc Y2CCNCursesUI.h	\
-	YNCursesUI.cc YNCursesUI.h
+	YNCursesComponent.h
 
 INCLUDES = -I$(includedir) -I$(includedir)/yui -I$(includedir)/y2util/qt
 
