--- a/libyui-ncurses/yast2-ncurses.spec.in
+++ b/libyui-ncurses/yast2-ncurses.spec.in
@@ -1,6 +1,6 @@
 @HEADER-COMMENT@
 
-# neededforbuild  curl curl-devel dejagnu doxygen expect gpp libgpp libpng libxcrypt libxcrypt-devel liby2util liby2util-devel openslp openslp-devel openssl openssl-devel popt-devel rpm-devel tcl yast2-core yast2-core-devel yast2-devtools yast2-testsuite yast2-packagemanager yast2-packagemanager-devel
+# neededforbuild  curl curl-devel dejagnu doxygen expect gpp libgpp libpng libxcrypt libxcrypt-devel liby2util liby2util-devel openslp openslp-devel openssl openssl-devel pkgconfig popt-devel rpm-devel tcl yast2-core yast2-core-devel yast2-devtools yast2-testsuite yast2-packagemanager yast2-packagemanager-devel
 
 @HEADER@
 
