Ripped out all package related stuff: y2pm out, zypp not yet in (#149879)
svn path=/trunk/ncurses/; revision=27819

--- a/libyui-ncurses/testsuite/Makefile.am
+++ b/libyui-ncurses/testsuite/Makefile.am
@@ -12,9 +12,10 @@ INCLUDES = -I../src -I$(includedir) -I$(includedir)/yui
 
 noinst_PROGRAMS = runcurses utf8test y2ncurses in_wch
 
+# -lzypp
 runcurses_SOURCES = runcurses.cc
 runcurses_LDADD = ../src/liby2ncurses.la -lncurses -lpanel -lpthread \
-	-ly2 -lyui -lycp -lutil -ly2pm
+	-ly2 -lyui -lycp -lutil
 
 runcurses_LDFLAGS = -L$(libdir)			\
 	-Xlinker --whole-archive                \
@@ -25,7 +26,7 @@ utf8test_SOURCES = utf8test.cc			\
 		NCstring_test.h NCstring_test.cc
 
 utf8test_LDADD = ../src/liby2ncurses.la -lncursesw -lpanelw -lpthread \
-	-ly2 -lyui -lycp -lutil -ly2pm
+	-ly2 -lyui -lycp -lutil
 
 in_wch_SOURCES = in_wch.cc
 
@@ -34,7 +35,7 @@ in_wch_LDADD = -lncursesw
 
 y2ncurses_SOURCES = y2ncurses.cc
 y2ncurses_LDADD = -lncurses -lpanel -lpthread -ly2 -lyui -lycp \
-	-lutil -ly2pm
+	-lutil
 
 y2ncurses_LDFLAGS = -static -L$(libdir)	\
 	-Xlinker --whole-archive		\
