NCPkgSelMapper.cc NCPkgSelMapper.h added
svn path=/trunk/ncurses/; revision=29258

--- a/libyui-ncurses/src/Makefile.am
+++ b/libyui-ncurses/src/Makefile.am
@@ -84,6 +84,7 @@ liby2ncurses_la_SOURCES =				\
 	NCPopupTextEntry.h NCPopupTextEntry.cc		\
 							\
 	YQZypp.h					\
+	NCPkgSelMapper.cc NCPkgSelMapper.h		\
 	NCPackageSelector.cc NCPackageSelector.h        \
 	NCPkgTable.cc NCPkgTable.h                      \
 	NCPopupSearch.cc NCPopupSearch.h                \
