require libzypp >= 1.0.0 VERSION 2.13.32
svn path=/trunk/ncurses/; revision=30998

--- a/libyui-ncurses/yast2-ncurses.spec.in
+++ b/libyui-ncurses/yast2-ncurses.spec.in
@@ -17,7 +17,7 @@ Obsoletes:	yast2-ui-ncurses-devel
 Provides:	y2curses
 Obsoletes:	y2curses
 Requires:	glibc-locale
-
+Requires:	libzypp >= 1.0.0
 %description
 -
 
