--- a/libyui-ncurses/configure.in.in
+++ b/libyui-ncurses/configure.in.in
@@ -8,6 +8,11 @@
 @YAST2-CHECKS-COMMON@
 @YAST2-CHECKS-PROGRAM@
 
+## SUSE ncurses do not need the wide include
+## but other distros do, #201705
+AC_CHECK_HEADER([ncursesw/curses.h],
+		[CPPFLAGS="$CPPFLAGS -I/usr/include/ncursesw"])
+
 PKG_CHECK_MODULES([ZYPP], [libzypp])
 
 ## and generate the output
