reverted unintentional change from last commit
svn path=/branches/SuSE-SLE-10-SP1-Branch/ncurses/; revision=32883

--- a/libyui-ncurses/src/Makefile.am
+++ b/libyui-ncurses/src/Makefile.am
@@ -17,6 +17,7 @@ liby2ncurses_la_LDFLAGS = -version-info 2:0
 
 libpy2ncurses_la_LIBADD =		\
 	-lyui				\
+	${ZYPP_LIBS}			\
 	-lncursesw -lpanelw
 liby2ncurses_la_LIBADD = $(libpy2ncurses_la_LIBADD)
 
