--- a/libyui-ncurses/yast2-ncurses.spec.in
+++ b/libyui-ncurses/yast2-ncurses.spec.in
@@ -17,7 +17,8 @@ Obsoletes:	yast2-ui-ncurses-devel
 Provides:	y2curses
 Obsoletes:	y2curses
 Requires:	glibc-locale
-Requires:	libzypp >= 1.0.0
+#zypp::ui::PatternContents
+Requires:	libzypp >= 2.7.0
 %description
 -
 
