- Added RunInTerminal UI builtin for running external programs in   the same terminal - 2.13.54
svn path=/branches/SuSE-SLE-10-SP1-Branch/ncurses/; revision=34831

--- a/libyui-ncurses/yast2-ncurses.spec.in
+++ b/libyui-ncurses/yast2-ncurses.spec.in
@@ -19,6 +19,8 @@ Obsoletes:	y2curses
 Requires:	glibc-locale
 #zypp::ui::PatternContents
 Requires:	libzypp >= 2.7.0
+# UI builtins
+Requires:	yast2-core >= 2.13.32
 %description
 -
 
