- Added functionality to export/import list of all packages and   patterns to xml file (FaTE #300729) - 2.15.4
svn path=/trunk/ncurses/; revision=35211

--- a/libyui-ncurses/yast2-ncurses.spec.in
+++ b/libyui-ncurses/yast2-ncurses.spec.in
@@ -17,8 +17,8 @@ Obsoletes:	yast2-ui-ncurses-devel
 Provides:	y2curses
 Obsoletes:	y2curses
 Requires:	glibc-locale
-#zypp::ui::PatternContents
-Requires:	libzypp >= 2.7.0
+#zypp::syscontent::Reader/Writer
+Requires:	libzypp >= 2.10.0
 # UI builtins
 Requires:	yast2-core >= 2.15.1
 %description
