class NCCheckBoxFrame added
svn path=/branches/SuSE-SLE-10-SP1-Branch/ncurses/; revision=35281

--- a/libyui-ncurses/src/Makefile.am
+++ b/libyui-ncurses/src/Makefile.am
@@ -50,6 +50,7 @@ liby2ncurses_la_SOURCES =				\
 	NCSquash.h NCSquash.cc				\
 	NCAlignment.h NCAlignment.cc			\
 	NCFrame.h NCFrame.cc				\
+	NCCheckBoxFrame.h NCCheckBoxFrame.cc		\
 	NCSplit.h NCSplit.cc				\
 	NCReplacePoint.h NCReplacePoint.cc		\
 	NCRadioButtonGroup.h NCRadioButtonGroup.cc	\
