added some comments to dependencies
svn path=/branches/SuSE-SLE-10-SP1-Branch/ncurses/; revision=35450

--- a/libyui-ncurses/yast2-ncurses.spec.in
+++ b/libyui-ncurses/yast2-ncurses.spec.in
@@ -17,9 +17,9 @@ Obsoletes:	yast2-ui-ncurses-devel
 Provides:	y2curses
 Obsoletes:	y2curses
 Requires:	glibc-locale
-#zypp::syscontent::Reader/Writer
+#Resolver::verifySystem
 Requires:	libzypp >= 2.12.1
-# UI builtins
+# UI builtins (CheckBoxFrame)
 Requires:	yast2-core >= 2.13.33
 %description
 -
