--- a/libyui-ncurses/yast2-ncurses.spec.in
+++ b/libyui-ncurses/yast2-ncurses.spec.in
@@ -17,10 +17,10 @@ Obsoletes:	yast2-ui-ncurses-devel
 Provides:	y2curses
 Obsoletes:	y2curses
 Requires:	glibc-locale
-#zypp::syscontent::Reader/Writer
+#Resolver::verifySystem 
 Requires:	libzypp >= 2.12.1
-# UI builtins
-Requires:	yast2-core >= 2.15.1
+# UI builtins (CheckBoxFrame)
+Requires:	yast2-core >= 2.15.2
 %description
 -
 
