Added ncurses-devel to BuildRequires
svn path=/trunk/ncurses/; revision=37578

--- a/libyui-ncurses/yast2-ncurses.spec.in
+++ b/libyui-ncurses/yast2-ncurses.spec.in
@@ -3,7 +3,7 @@
 
 @HEADER@
 BuildRequires:	doxygen gcc-c++ yast2-core-devel yast2-devtools libzypp-devel
-BuildRequires:	libxcrypt-devel blocxx-devel
+BuildRequires:	libxcrypt-devel blocxx-devel ncurses-devel
 
 Summary:	-
 Provides:	yast2_ui
